--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             </div>
           </div>
         </div>
-        <div id="cards-activity" class="container">
+        <div class="container mb-3">
+        
+        <div id="cards-activity">
           <div class="row">
             <div class="col-4">
               <div class="card text-center" style="width: 18rem;">
@@ -98,7 +100,7 @@
               </div>
             </div>
           </div>
-
+  <div>
         </div>
       </section>
       <section id="aws" class="aws  center-aws">
