--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         
         <div id="cards-activity">
           <div class="row">
-            <div class="col-4">
-              <div class="card text-center" style="width: 18rem;">
+            <div class="col-12  col-md-4 col-lg-4 col-xs-12 col-sm-12">
+              <div class="card text-center">
                 <div class="card-body">
                   <img src="https://developers.google.com/community/images/icon_connect.svg" alt="">
                   <h5 class="card-title">Connect</h5>
@@ -81,8 +81,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <div class="card text-center" style="width: 18rem;">
+            <div class="col-12 col-md-4  col-lg-4 col-xs-12 col-sm-12">
+              <div class="card text-center">
                 <div class="card-body">
                   <img src="https://developers.google.com/community/images/icon_inspired.svg" alt="">
                   <h5 class="card-title">Learn</h5>
@@ -90,8 +90,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <div class="card text-center" style="width: 18rem;">
+            <div class="col-12 col-md-4  col-lg-4 col-xs-12 col-sm-12">
+              <div class="card text-center">
                 <div class="card-body">
                   <img src="https://developers.google.com/community/images/icon_new_skills.svg" alt="">
                   <h5 class="card-title">Grow</h5>
