--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <title>GDSC - TKR College Of Engineering And Technology,Hyderabad</title>
+    <title>Coding Club- TKRCET</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbg navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class=" navbg navbar sticky-top  navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="./img/logo.png" alt="" height="50" class="d-inline-block align-text-top">
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#gdsc-section">Development</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#gdsc-section">Competetive Programming</a>
+                <a class="nav-link" href="#gdsc-section">Competitive Programming</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#cards-activity">Activities</a>
@@ -47,7 +47,7 @@
           <img class="bg-img img-fluid" src="./img/background.jpg" alt="">
           <div class="image-text">
             <h1>TKR College Of Engineering And Technology,Hyderabad</h1>
-            <h3>Developer Student Club</h3>
+            <h3>Coding Club</h3>
             <a href="#footer"><button class="btn btn-light">
               Contact Us
           </button></a>
